# RustySecrets

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yaml
protobuf/: version.proto
protobuf/dss/: secret.proto
protobuf/wrapped/: secret.proto
src/: errors.rs  gf256.rs  lib.rs  proto.rs  vol_hash.rs
src/dss/: format.rs  mod.rs  random.rs
src/dss/ss1/: mod.rs  scheme.rs  serialize.rs
src/dss/thss/: mod.rs  scheme.rs  serialize.rs
src/share/: mod.rs  validation.rs
src/sss/: format.rs  mod.rs  scheme.rs
src/wrapped_secrets/: mod.rs  scheme.rs
tests/: generation_errors.rs  randomized_tests.rs  recovery_errors.rs  ss1_recovery_errors.rs  test_vectors.rs  thss_generation_errors.rs  thss_recovery_errors.rs
