[package]
name    = "rusty_secrets"
version = "0.2.3-pre"
authors = [
  "Frederic Jacobs <github@fredericjacobs.com>",
  "Romain Ruetschi <romain.ruetschi@gmail.com>",
  "Dylan Bourgeois <dtsbourg@gmail.com>",
  "Noah Vesely <fowlslegs@riseup.net>",
  "sellibitze"
]

description = "Implementation of threshold Shamir's secret sharing in the Rust programming language."
homepage    = "https://github.com/freedomofpress/RustySecrets"
license     = "BSD-3-Clause"
readme      = "README.md"
build       = "build.rs"
edition     = "2021"
exclude     = ["Cargo.lock"]

[badges]
travis-ci = { repository = "SpinResearch/RustySecrets", branch = "master" }
coveralls = { repository = "SpinResearch/RustySecrets", branch = "master", service = "github" }

[features]
default = ["dss"]
dss     = []

[dependencies]
base64      = "0.22"
rand        = "0.9"
ring = "0.17.8"
merkle_sigs = { git = "https://github.com/ETO-GRUPPE-TECHNOLOGIES-GmbH/merkle_sigs.rs" }
prost = "0.13"
rand_chacha = "0.9"

[dependencies.error-chain]
version          = "0.12.0"
default-features = false

[dev-dependencies]
itertools  = "0.13"
quickcheck = "1"
flate2     = "1"

[build-dependencies]
prost-build = "0.13"

[profile.bench]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[package.metadata.release]
sign-commit                 = true
sign-tag                    = true
pre-release-commit-message  = "Release version {{version}}."
post-release-commit-message = "Start next development iteration {{version}}."
tag-prefix                  = "v"
tag-message                 = "Release version {{version}}."
doc-commit-message          = "Update documentation."
dev-version-ext             = "pre"

[lints.rust]
# emitted by error_chain! macro which is no longer maintained, silence the warning
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_error_description_deprecated)'] }

